--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -23,7 +23,7 @@
 
 .light-mode {
     --color-primary: #FFFFFF;
-    --color-secondary: #F56692;
+    --color-secondary: #87cefa;
     --color-white: #454e56;
     --color-black: #000;
     --color-grey0: #f8f8f8;
@@ -298,12 +298,12 @@ section {
                         transition: all .4s ease-in-out;
                         width: 60%;
                     }
-                    .html { width: 80%; }
-                    .css { width: 95%; }
-                    .js { width: 75%; }
-                    .react{ width: 60%; }
-                    .node{ width: 87%; }
-                    .python{ width: 70%; }
+                    .html { width: 70%; }
+                    .css { width: 70%; }
+                    .js { width: 60%; }
+                    .react{ width: 10%; }
+                    .node{ width: 10%; }
+                    .python{ width: 50%; }
                 }
             }
         }
